// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component should render 1`] = `
<Dropdown
  className="mr-5"
  navbar={false}
>
  <DropdownToggle
    className="d-flex align-items-center"
    variant="primary"
  >
    Login with
  </DropdownToggle>
  <DropdownMenu
    align="left"
    alignRight={false}
    className="dropdown dropdown-menu-right"
    flip={true}
  >
    <DropdownItem
      as={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      className="d-flex align-items-center"
      disabled={false}
      key="1"
      onClick={[Function]}
    >
      <Image
        className="mr-3"
        fluid={false}
        height="20"
        rounded={false}
        roundedCircle={false}
        thumbnail={false}
        width="20"
      />
      test
    </DropdownItem>
  </DropdownMenu>
</Dropdown>
`;

exports[`Login component should render user data if user authenticated 1`] = `
<Dropdown
  className="mr-5"
  navbar={false}
>
  <DropdownToggle
    className="d-flex align-items-center"
    variant="light"
  >
    <Image
      alt="first"
      className="mr-1"
      fluid={false}
      h="30"
      referrerPolicy="no-referrer"
      rounded={false}
      roundedCircle={true}
      src="test.png"
      thumbnail={false}
      width="30"
    />
    first
     
    last
  </DropdownToggle>
  <DropdownMenu
    align="left"
    alignRight={false}
    className="dropdown dropdown-menu-right"
    flip={true}
  >
    <DropdownItem
      as={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      disabled={false}
      to="/applications"
    >
      Applications
    </DropdownItem>
    <DropdownItem
      as={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      data-test="logout-btn"
      disabled={false}
      onClick={[Function]}
    >
      Logout
    </DropdownItem>
  </DropdownMenu>
</Dropdown>
`;
